Fix various deprecation warnings (#118)
* Fix various deprecation warnings

* Bump jackson version for security fix

* Update CHANGELOG

* backout jackson update